refactor: Set 대신 List를 사용해 매핑, stream() 호출 없이 이벤트 정렬 (#96)